feat: commands core with state machine
